[tool.poetry]
name = "product-management"
version = "0.1.0"
description = ""
authors = ["Andrew Lee <hello@vndrewlee.com>"]
readme = "README.md"
packages = [{include = "product_management"}]

[tool.poetry.dependencies]
python = "^3.10"
gql = "^3.4.0"
aiohttp = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
